# Pantheios.Extras.Main

./: .gitignore  AUTHORS.md  CMakeLists.txt  INSTALL.md  LICENSE  NEWS.md  README.md  TODO.md  build_cmake.sh  clean_cmake.sh  execute_performance_tests.sh  pantheios.extras.main.vc10.sln  pantheios.extras.main.vc6.dsw  pantheios.extras.main.vc9.sln  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c/example.c.main.1/: CMakeLists.txt  example.c.main.1.c  implicit_link.cpp
examples/c/example.c.main.1/vc10/: example.c.main.1.vcxproj  example.c.main.1.vcxproj.filters
examples/c/example.c.main.1/vc6/: example.c.main.1.dsp
examples/c/example.c.main.2/: CMakeLists.txt  example.c.main.2.c  implicit_link.cpp
examples/c/example.c.main.2/vc10/: example.c.main.2.vcxproj  example.c.main.2.vcxproj.filters
examples/c/example.c.main.2/vc6/: example.c.main.2.dsp
examples/c/example.c.wmain/: example.c.wmain.c  implicit_link.cpp
examples/c/example.c.wmain/vc10/: example.c.wmain.vcxproj  example.c.wmain.vcxproj.filters
examples/c/example.c.wmain/vc6/: example.c.wmain.dsp
examples/cpp/: CMakeLists.txt
examples/cpp/example.cpp.main.1/: CMakeLists.txt  example.cpp.main.1.cpp  implicit_link.cpp
examples/cpp/example.cpp.main.1/vc10/: example.cpp.main.1.vcxproj  example.cpp.main.1.vcxproj.filters
examples/cpp/example.cpp.main.1/vc6/: example.cpp.main.1.dsp
examples/cpp/example.cpp.main.2/: CMakeLists.txt  example.cpp.main.2.cpp  implicit_link.cpp
examples/cpp/example.cpp.main.MFC/: CMakeLists.txt  example.cpp.main.MFC.cpp  implicit_link.cpp
examples/cpp/example.cpp.wmain/: CMakeLists.txt  example.cpp.wmain.cpp  implicit_link.cpp
(+36 files in other folders)
